tests/a/tests/integrity/fail/loop/for.0.rs
#![allow(unused_variables)]

fn main() {
    #[cnbt::tag({bin}{bin})]
    let mut x = 5;

    for i in 0..c::value() {
        x += 6;
    }
}